Refactor and fix Sync, EulerRotCtrl, BaseShader, TextureBatch, Matrix3f, add shear method, Add drawText method without TextureBatch to BitmapFont