@@ -5,7 +5,6 @@
   <groupId>net.generalpashon</groupId>
   <artifactId>jpize-engine</artifactId>
   <version>23.12.1</version>
-  <description>Java Game Engine</description>
   <packaging>pom</packaging>
 
   <build>
@@ -17,10 +16,6 @@
         <configuration>
           <source>17</source>
           <target>17</target>
-          <compilerArgs>
-            <arg>--add-exports=java.base/jdk.internal.util=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/jdk.internal.util=ALL-UNNAMED</arg>
-          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
